tests/expectations/compiler/dyn_record/dyn_record_wrong_owner_type_fail.out
Error [EPAR0370005]: expected 'record' -- found ')'
    --> compiler-test:2:19
     |
   2 |     fn main(r: dyn) -> u64 {
     |                   ^
